# tmmc-lnpy

./: .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc.toml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  MANIFEST.in  Makefile  README.html  README.md  README.rst  __init__.py  _cache.py  _segment.py  authors.html  binodal.py  build_phases.py  conftest.py  contributing.html  environment-dev.yaml  environment-tools.yaml  environment.yaml  genindex.html  history.html  index.html  installation.html  license.html  molfrac.py  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  (+5 more)
_sources/: index.md
_static/: documentation_options.js
changelog.d/: 20230424_232156_william.krekelberg_update_cruft.md  20230502_013219_william.krekelberg_module_utilities.md  20230508_124552_william.krekelberg.md  20230824_202737_william.krekelberg_add_typing.md  20240328_153828_william.krekelberg_v0_7_0.md  20240328_165328_william.krekelberg.md  20240416_123348_william.krekelberg_add_combine_xarray_support.md  20240422_101908_william.krekelberg_add_combine_xarray_support.md
config/: nbval.ini  recipe-append.yaml
docs/: .#copy_docs_to_here.sh  Makefile  api_autosummary.html  api_autosummary.md  api_autosummary.rst  authors.html  conf.py  contributing.html  copy_docs_to_here.sh  genindex.html  git_add_all_but_src.sh  history.html  index.html  index.md  index.rst  installation.html  installation.md  installation.rst  make.bat  navigation.md  objects.inv  readme.html  search.html  searchindex.js  spelling_wordlist.txt
docs/_modules/: index.html
docs/_static/: documentation_options.js
docs/examples/: index.md
docs/notebooks/: Basic_usage.html  Basic_usage.ipynb
docs/reference/: api-legacy.md  api-modules.rst  api-other.rst  api-public.md  index.md
docs/src/: conf.py  installation.rst
environment/: base.yaml  dev-extras.yaml  dev.yaml  docs-extras.yaml  docs.yaml  lint.yaml  py310-dev-base.yaml  py310-dev-complete.yaml  py310-dev.yaml  py310-docs.yaml  py310-test.yaml  py310-typing.yaml  py311-test.yaml  py311-typing.yaml  py38-test.yaml  py38-typing.yaml  py39-test.yaml  py39-typing.yaml  test.yaml  typing.yaml
examples/: anal_1d_stuff.ipynb
examples/1D/: anal_1d_stuff.ipynb
examples/2D/: anal_bulk.ipynb  anal_conf_sym.ipynb  anal_confined_asym.ipynb  const_molfrac-1.ipynb  const_molfrac.ipynb  utils.py
examples/HS_mix/: HS_mix_bulk-basic_tests.ipynb  HS_mix_bulk.ipynb  data_0_bino.csv  data_0_bino_dw.csv  data_0_dw.csv  data_0_spin.csv  data_0_spin_dw.csv
examples/LJ_cfs_2.5sig/: LJ_example-basic_tests.ipynb  LJ_example.ipynb  data_0_course.csv  data_0_fine.csv  data_1_bino.csv  data_1_can.csv  data_1_course.csv  data_1_spin.csv  data_1_spin_dw.csv  t072871.metadata.json
examples/LJ_confined/: LJ_isotherm.ipynb
examples/LJ_mix/: LJ_mix_lnz-basic_tests.ipynb  LJ_mix_lnz.ipynb  LJ_mix_molfrac.ipynb  in.ljmix4.t080.v512.r1.001.txt
examples/LJ_stability/: eos.csv  eos_from_lnpi.ipynb
examples/PiofN/: ljcut.t065.finiteslit.L_20nm.W_4nm.r2.columns  ljcut.t065.finiteslit.L_20nm.W_4nm.r2.single_isotherm.txt
examples/multiple_states/: Analyzing_multiple_states.ipynb
examples/usage/: Basic_usage.ipynb
lnPi/: __init__.py  _cache.py  _docstrings.py  _segment.py  _utils.py  accessors.py  binodal.py  bracket.py  build_phases.py  cached_decorators.py  collection.py  collectionlnpi.py  collectionlnpiutils.py  collectionutils.py  core.py  core2.py  core_xr.py  ensembles.py  examples.py  extensions.py  init.old.py  lnpicollection.py  lnpicollections.py  lnpidata.py  lnpienergy.py  localenergy.py  maskeddata.py  maskedlnpi.py  maskedlnpi_legacy.py  maskedlnpidelayed.py  molfrac.py  molfrac_vec.py  monoutils.py  monoutils_vec.py  options.py  segment.py  segment2.py  serieswrapper.py  spinodal.py  stability.py  (+5 more)
lnPi/data/: lj_sup_example.json
lnpy/: __init__.py  _docstrings.py  cached_decorators.py  ensembles.py  examples.py  extensions.py  lnpicollection.py  lnpicollectionutils.py  lnpidata.py  lnpienergy.py  lnpiseries.py  molfrac.py  options.py  segment.py  stability.py  utils.py
lnpy/data/: watermof_example.json
notebooks/: Basic_usage.html
reference/: api-legacy.html  api-modules.html  api-other.html  api-public.html  index.html
requirements/: dev-base.txt  dev-complete.txt  dev.txt  docs.txt  pipxrun-tools.txt  py310-dev-base.yaml  py310-dev-complete.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test.yaml  py310-typing.yaml  py311-dev-base.yaml  py311-dev-complete.yaml  py311-dev.yaml  py311-docs.yaml  py311-test-extras.yaml  py311-test-notebook.yaml  py311-test.yaml  py311-typing.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py312-typing.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py313-typing.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test.yaml  py39-typing.yaml  test-notebook.txt  test.txt  typing.txt
requirements/lock/: py310-test.txt  py310-test.txt.hash.json  py310-typing.txt  py310-typing.txt.hash.json  py311-dev-base.txt  py311-dev-base.txt.hash.json  py311-dev-complete.txt  py311-dev-complete.txt.hash.json  py311-dev.txt  py311-dev.txt.hash.json  py311-docs.txt  py311-docs.txt.hash.json  py311-pipxrun-tools.txt  py311-pipxrun-tools.txt.hash.json  py311-test-notebook.txt  py311-test-notebook.txt.hash.json  py311-test.txt  py311-test.txt.hash.json  py311-typing.txt  py311-typing.txt.hash.json  py311-uvxrun-tools.txt  py312-test.txt  py312-test.txt.hash.json  py312-typing.txt  py312-typing.txt.hash.json  py313-test.txt  py313-typing.txt  py38-test.txt  py38-test.txt.hash.json  py38-typing.txt  py38-typing.txt.hash.json  py39-test.txt  py39-test.txt.hash.json  (+2 more)
scripts/: dist-conda.mk
tests/: conftest.py  test_combine.py  test_hs_mix.py  test_import.py  test_lj_mix_0.py  test_lnPi.py  test_lnpicollectionutils.py  test_single_comp_sub.py  test_single_comp_super.py  test_splice.py  test_water_cluster.py
tools/: auto_parallel_files.py  dataclass_parser.py  noxtools.py  shared.just
(+112 files in other folders)
