[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "tmmc-lnpy"
description = "Analysis of lnPi results from TMMC simulation"
keywords = [
    "tmmc-lnpy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "bottleneck",
    "importlib-resources; python_version<'3.10'",
    "joblib",
    "lazy-loader",
    "module-utilities>=0.9.0",
    "numba",
    "numpy",
    "scikit-image>=0.21",
    "scipy",
    "tqdm",
    "typing-extensions>=4.10.0; python_version<'3.13'",
    "xarray",
]
optional-dependencies.all = [ "tmmc-lnpy[viz,resample]" ]
optional-dependencies.resample = [
    "cmomy>=0.23.4",
    "dask[diagnostics]",
    "netcdf4",
]
optional-dependencies.viz = [
    "ipywidgets",
    "matplotlib",
]
urls.Documentation = "https://pages.nist.gov/tmmc-lnpy/"
urls.Homepage = "https://github.com/usnistgov/tmmc-lnpy"

[dependency-groups]
dev = [
    "tmmc-lnpy[all]",
    { include-group = "dev-extras" },
    { include-group = "mypy" },
    { include-group = "nbval" },
    { include-group = "test" },
    { include-group = "typing" },
    { include-group = "uvxrun" },
]
test = [
    { include-group = "test-extras" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    "tmmc-lnpy[viz]",
]
dev-extras = [
    "ipykernel",
    "ipython",
    "nbclient>=0.10.0",
    "nox>=2024.4.15",
    "pytest-accept",
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
mypy = [ "mypy>=1.14.1" ]
nbval = [ "nbclient>=0.10.0", "nbval" ]
test-extras = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
]
test-notebook = [
    "tmmc-lnpy[viz]",
    { include-group = "nbval" },
    { include-group = "test-extras" },
]
typing = [
    "pandas-stubs",
    "pylint",
    "pytest",
    "types-tqdm",
    { include-group = "uvxrun" },
]
# Anything needed to run tools/uvxrun.py
# NOTE: uvxrun-tools defined explicitly in tool.pyproject2conda.envs.uvxrun-tools
uvxrun = [ "packaging" ]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build]
exclude = [
    ".*_cached",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples",
    "docs",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/lnpy",
    "src/lnPi",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

# * Linting --------------------------------------------------------------------

[tool.ruff]
line-length = 88
extend-include = [
    "*.ipynb",
]
extend-exclude = [
    ".numba_cache",
    ".venv",
    "dist-conda",
    "examples/archived",
    # "tests/",
    # "src/lnpy/tests",
]
fix = true
unsafe-fixes = true

format.docstring-code-format = true
lint.select = [
    "ALL",
]
lint.ignore = [
    # * Annotations
    "ANN401", # - Any ok sometimes
    # * These conflict with formatter
    "COM", # - flake8-commas, formatter should take care of this?
    "CPY", # - Don't require copyright
    # * Docstrings
    "D105", # - Missing magic method docstring
    # * Not a fan of these.  And lead to issues with docfiller
    "D107", # - Missing docstring in __init__
    "D203", # - 1 blank line required before class docstring
    "D205", # - blank line after summary
    "D212", # - Multi-line docstring summary should start at the first line
    # * This leads to errors with placing titles in module
    "D400", # - First line should end with a period
    "D401", # - First line of docstring should be in imperative mood: "{first_line}"
    "D415", # - First line should end with a period, question mark, or exclamation point
    "D417", # - Missing argument description in the docstring for {definition}: {name} (bad with docfiller)
    "E402", # - module level import not at top of file
    # * Other
    "E501", # - line too long - let formatter fix this
    "E731", # - do not assign a lambda expression, use a def
    "FBT",  # - bools are ok
    "ISC",  # - flake8-implicit-str-concat
    # * Allow non top level imports
    "PLC0415", # - import should be at top level (leads to issues with imports in func?)
    "TID252",  # - Allow relative imports
]
# Use extend-ignore for project specific ignores (avoid changing ignore directly)
lint.extend-ignore = [
    # * ignore complexity for now
    "C901",
    # "ERA",     # - eradicate (want to keep some stuff)
    # "ANN",     # - Annotations (just use mypy/pyright)
    # * pylint
    # "PLR2004", # - numbers in comparison sometimes ok
    # "PLR0913", # - complexity sometimes ok
    # "PLR0917", # - complexity sometimes ok
    # * Docstrings ymmv
    "D102",   # - Missing docstring in public method
    "D103",   # - Missing docstring in public function
    "D202",   # - blank line after docstring
    "DOC201",
    "DOC202",
    "DOC501",
    "PLR091",
    # "PD",        # - not using pandas?
    # "NPY",       # - not using numpy?
    # * Annotations
    "SLF001", # - flake8-self (private access sometimes OK)
]
lint.per-file-ignores."**/*.ipynb" = [
    "B018",
    "D100",
    "INP001",
]
lint.per-file-ignores."docs/conf.py" = [
    "ERA",
    "INP001",
]
lint.per-file-ignores."noxfile.py" = [
    "RUF009",
]
lint.per-file-ignores."tests/*.py" = [
    "D",
    "S101",
]
lint.per-file-ignores."tools/*.py" = [
    "A",
    "D102",
    "DOC402",
    "S",
    "SLF001",
]
lint.extend-per-file-ignores."**/*.ipynb" = [
    "ANN",
    "E302",
    "E305",
    "PD010",
    "PD013",
    "PLR2004",
    "S110",
    "T201",
]
lint.extend-per-file-ignores."**/*.py" = [
    "FIX002",
    "N999",
    "PLR2004",
    "TD003",
]
lint.extend-per-file-ignores."**/conftest.py" = [
    "ANN",
    "PT",
]
lint.extend-per-file-ignores."**/core/typing.py" = [
    "A005",
]
lint.extend-per-file-ignores."**/ensembles.py" = [
    "N802",
    "N803",
    "N806",
]
lint.extend-per-file-ignores."**/factory.py" = [
    "D101",
]
lint.extend-per-file-ignores."**/lnPi/*.py" = [
    "ANN",
    "B",
    "N",
    "PGH",
    "PL",
    "S101",
    "SIM",
]
# Project specific ignores (avoid changing per-file-ignores directly)
lint.extend-per-file-ignores."tests/*.py" = [
    "ANN",
]
lint.unfixable = [
    "ERA",
    "F401",
    "PLR6104",
    "T",
]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.isort.known-first-party = [
    "lnpy",
    "lnPi",
]
lint.pydocstyle.convention = "numpy"
lint.pylint.max-args = 15
lint.pylint.max-positional-args = 15
lint.pylint.max-public-methods = 30
lint.preview = true

[tool.nbqa.exclude]
codespell = "^examples/archived"

[tool.check-wheel-contents]
toplevel = [
    "lnpy",
    "lnPi",
]
src_dir = [
    "src",
]

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--cov-config=pyproject.toml",
    "--pyargs",
    "-n",
    "4",
]
testpaths = [
    # "README.md",  # py38 issues.
    "lnPi",
    "lnpy",
    "tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/core/typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * Typing ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true
untyped_calls_exclude = [
    "skimage",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "joblib.*",
    "skimage.*",
    "bottleneck.*",
    "scipy.ndimage.*",
    "scipy.spatial.*",
    "scipy.optimize.*",
    "scipy.sparse.*",
    "lnPi.*",
    "IPython.*",
    "matplotlib.*",
    "numba.*",
]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [ ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
]
# strict = ["src/lnpy", "noxfile.py", "tools/*.py"]  # TODO(wpk): enable strict mode for src
strict = [
    "noxfile.py",
    "tools/*.py",
]
pythonVersion = "3.11"
# useLibraryCodeForTypes = true
# typeCheckingMode = "strict"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user_config = "config/userconfig.toml"
template_python = "requirements/py{py}-{env}"
template = "requirements/{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
matplotlib = { skip = true, packages = "matplotlib-base" }
lazy-loader = { skip = true, packages = "lazy_loader" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.uvxrun-tools]
# define these here so they don't override deps in uv.lock
reqs = [
    # these used solely for specking tools to be used with tools/uvxrun.py
    "conda-lock>=2.5.5",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit",
    "pyright>=1.1.392",
    "scriv",
    "twine>=5.0.0",
]
groups = [ "mypy" ]
skip_package = true
style = "requirements"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip_package = true
python = "all"

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.5.21"

[tool.uv.pip]
annotation-style = "line"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]

[tool.typos.default]
extend-ignore-identifiers-re = [ "NDArray.*" ]

[tool.typos.default.extend-words]
datas = "datas"

[tool.typos.default.extend-identifiers]
fileprefix_inh = "fileprefix_inh"
