[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "tmmc-lnpy"
description = "Analysis of lnPi results from TMMC simulation"
keywords = [
    "tmmc-lnpy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "bottleneck",
    "importlib-resources; python_version<'3.10'",
    "joblib",
    "lazy-loader",
    "module-utilities>=0.9.0",
    "numba",
    "numpy",
    "scikit-image>=0.21",
    "scipy",
    "tqdm",
    "typing-extensions>=4.10.0; python_version<'3.13'",
    "xarray",
]
optional-dependencies.all = [ "tmmc-lnpy[viz,resample]" ]
optional-dependencies.resample = [
    "cmomy>=0.23.4",
    "dask[diagnostics]",
    "netcdf4",
]
optional-dependencies.viz = [
    "ipywidgets",
    "matplotlib",
]
urls.Documentation = "https://pages.nist.gov/tmmc-lnpy/"
urls.Homepage = "https://github.com/usnistgov/tmmc-lnpy"

[dependency-groups]
dev = [
    "tmmc-lnpy[all]",
    { include-group = "dev-extras" },
    { include-group = "mypy" },
    { include-group = "nbval" },
    { include-group = "test" },
    { include-group = "typing" },
    { include-group = "uvxrun" },
]
test = [
    { include-group = "test-extras" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    "tmmc-lnpy[viz]",
]
dev-extras = [
    "ipykernel",
    "ipython",
    "nbclient>=0.10.0",
    "nox>=2024.4.15",
    "pytest-accept",
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
mypy = [ "mypy>=1.14.1" ]
nbval = [ "nbclient>=0.10.0", "nbval" ]
test-extras = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
]
test-notebook = [
    "tmmc-lnpy[viz]",
    { include-group = "nbval" },
    { include-group = "test-extras" },
]
typing = [
    "pandas-stubs",
    "pylint",
    "pytest",
    "types-tqdm",
    { include-group = "uvxrun" },
]
# Anything needed to run tools/uvxrun.py
# NOTE: uvxrun-tools defined explicitly in tool.pyproject2conda.envs.uvxrun-tools
uvxrun = [ "packaging" ]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build]
exclude = [
    ".*_cached",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples",
    "docs",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/lnpy",
    "src/lnPi",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

[tool.nbqa.exclude]
codespell = "^examples/archived"

[tool.check-wheel-contents]
toplevel = [
    "lnpy",
    "lnPi",
]
src_dir = [
    "src",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--cov-config=pyproject.toml",
    "--pyargs",
    "-n",
    "4",
]
testpaths = [
    # "README.md",  # py38 issues.
    "lnPi",
    "lnpy",
    "tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/core/typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * Typing ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true
untyped_calls_exclude = [
    "skimage",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "joblib.*",
    "skimage.*",
    "bottleneck.*",
    "scipy.ndimage.*",
    "scipy.spatial.*",
    "scipy.optimize.*",
    "scipy.sparse.*",
    "lnPi.*",
    "IPython.*",
    "matplotlib.*",
    "numba.*",
]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [ ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
]
# strict = ["src/lnpy", "noxfile.py", "tools/*.py"]  # TODO(wpk): enable strict mode for src
strict = [
    "noxfile.py",
    "tools/*.py",
]
pythonVersion = "3.11"
# useLibraryCodeForTypes = true
# typeCheckingMode = "strict"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user_config = "config/userconfig.toml"
template_python = "requirements/py{py}-{env}"
template = "requirements/{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
matplotlib = { skip = true, packages = "matplotlib-base" }
lazy-loader = { skip = true, packages = "lazy_loader" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.uvxrun-tools]
# define these here so they don't override deps in uv.lock
reqs = [
    # these used solely for specking tools to be used with tools/uvxrun.py
    "conda-lock>=2.5.5",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit",
    "pyright>=1.1.392",
    "scriv",
    "twine>=5.0.0",
]
groups = [ "mypy" ]
skip_package = true
style = "requirements"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip_package = true
python = "all"

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.5.21"

[tool.uv.pip]
annotation-style = "line"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]

[tool.typos.default]
extend-ignore-identifiers-re = [ "NDArray.*" ]

[tool.typos.default.extend-words]
datas = "datas"

[tool.typos.default.extend-identifiers]
fileprefix_inh = "fileprefix_inh"
