[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "tmmc-lnpy"
description = "Analysis of lnPi results from TMMC simulation"
keywords = [
    "tmmc-lnpy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "bottleneck",
    "importlib-resources; python_version<'3.10'",
    "joblib",
    "lazy-loader",
    "module-utilities>=0.9.0",
    "numba",
    "numpy",
    "scikit-image>=0.21",
    "scipy",
    "tqdm",
    "typing-extensions>=4.10.0; python_version<'3.13'",
    "xarray",
]
optional-dependencies.all = [ "tmmc-lnpy[viz,resample]" ]
optional-dependencies.resample = [
    "cmomy>=0.23.4",
    "dask[diagnostics]",
    "netcdf4",
]
optional-dependencies.viz = [
    "ipywidgets",
    "matplotlib",
]
urls.Documentation = "https://pages.nist.gov/tmmc-lnpy/"
urls.Homepage = "https://github.com/usnistgov/tmmc-lnpy"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "optional" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    { include-group = "viz" },
]
# other packages/tools
ipython = [ "ipython" ]
mypy = [ "mypy>=1.15.0", "orjson" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest!=8.4" ]
pytest-accept = [ "pytest-accept" ]
# other environments
optional = [ "tmmc-lnpy[all]" ]
viz = [ "tmmc-lnpy[viz]" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "nbval",
    { include-group = "test" },
    { include-group = "viz" },
]
typecheck = [
    "pandas-stubs",
    "types-tqdm",
    { include-group = "pylint" },
    { include-group = "pytest" },
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build]
exclude = [
    ".*_cached",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples",
    "docs",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/lnpy",
    "src/lnPi",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

[tool.nbqa.exclude]
codespell = "^examples/archived"

[tool.repo-review]
ignore = [
    "GH",    # enable for actions
    "PC140", # do this externally
    "PC170", # pygrep
    "PC901", # ci message
    "RTD",
]

[tool.check-wheel-contents]
toplevel = [
    "lnpy",
    "lnPi",
]
src_dir = [
    "src",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--cov-config=pyproject.toml",
    "--pyargs",
    "-n",
    "4",
]
testpaths = [
    # "README.md",  # py38 issues.
    "lnPi",
    "lnpy",
    "tests",
]
minversion = "8"
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore: lnPi is deprecated.  Please transition to using lnpy instead:DeprecationWarning",
    "ignore: FNV hashing is not implemented in Numba:UserWarning",
    "ignore: This process:DeprecationWarning",
    "ignore: Module lnpy was never imported:coverage.exceptions.CoverageWarning",
    "ignore: No data was collected:coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/core/typing.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
untyped_calls_exclude = [
    "skimage",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "joblib.*",
    "skimage.*",
    "bottleneck.*",
    "scipy.ndimage.*",
    "scipy.spatial.*",
    "scipy.optimize.*",
    "scipy.sparse.*",
    "lnPi.*",
    "IPython.*",
    "matplotlib.*",
    "numba.*",
]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [ ]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
]
# strict = ["src/lnpy", "noxfile.py", "tools/*.py"]  # TODO(wpk): enable strict mode for src
strict = [
    "noxfile.py",
    "tools/*.py",
]
pythonVersion = "3.11"
# useLibraryCodeForTypes = true
# typeCheckingMode = "strict"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
matplotlib = { skip = true, packages = "matplotlib-base" }
lazy-loader = { skip = true, packages = "lazy_loader" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.uvx-tools]
# define these here so they don't override deps in uv.lock
reqs = [
    # these used solely for specking tools to be used with uvx ...
    "conda-lock>=2.5.5",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit>=4.0.0",
    "pre-commit-uv",
    "pyrefly",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty",
]
groups = [
    "mypy",
    "nox",
]
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip-package = true
python = "all"

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev" ]
fork-strategy = "requires-python"
required-version = ">=0.7.15"

[tool.uv.pip]
annotation-style = "line"
generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.12"
docs.requires-python = ">=3.12"
docs-live.requires-python = ">=3.12"
docs-spelling.requires-python = ">=3.12"
# other tools
ipython.requires-python = ">=3.12"
mypy.requires-python = ">=3.12"
notebook.requires-python = ">=3.12"
nox.requires-python = ">=3.12"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]

[tool.typos.default]
extend-ignore-identifiers-re = [ "NDArray.*" ]

[tool.typos.default.extend-words]
datas = "datas"

[tool.typos.default.extend-identifiers]
fileprefix_inh = "fileprefix_inh"
