[metadata]
name = lnpy
author = William P. Krekelberg
author_email = wpk@nist.gov
license= NIST license
license_files = LICENSE
description = lnPi analysis
# if using markdown
# long_description_content_type = text/markdown
long_description = file: README.rst, HISTORY.rst, LICENSE
keywords = TMMC
url = https://github.com/wpk-nist-gov/lnpy
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: Public Domain
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering



[options]
packages = find:
zip_safe = True # if using mypy, must be False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy
    xarray
    scipy
    scikit-image
    joblib
    bottleneck
    tqdm
    importlib_resources
    # dask
    # netcdf4




[options.package_data]
xarray =
    lnpy/data/*

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
testpaths = tests


[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = lnpy

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc
    docs
